[package]
name = "bonzomatic-texture-manager"
version = "0.1.0"
edition = "2024"

[dependencies]

eframe = "*"
egui = "*"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] } # Add the types you want support for
env_logger =  "*"
serde_json = "1.0"
zip = "4.0.0"
